feat: add getjobtaxonomies
